index.html updated

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
 	<title>Page Title</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="http://code.jquery.com/mobile/[version]/jquery.mobile-[version].min.css" />
-	<script src="http://code.jquery.com/jquery-[version].min.js"></script>
-	<script src="http://code.jquery.com/mobile/[version]/jquery.mobile-[version].min.js"></script>
+	<link rel="stylesheet" href="http://demos.jquerymobile.com/1.4.5/css/themes/default/jquery.mobile-1.4.5.min.css" />
+	<link rel="stylesheet" href="http://demos.jquerymobile.com/1.4.5/_assets/css/jqm-demos.css" />
+	<link rel="shortcut" href="http://demos.jquerymobile.com/1.4.5/favicon.ico">
+	<script src="http://demos.jquerymobile.com/1.4.5/js/jquery.js"></script>
+	<script src="http://demos.jquerymobile.com/1.4.5/_assets/js/index.js"></script>
+	<script src="http://demos.jquerymobile.com/1.4.5/js/jquery.mobile-1.4.5.min.js"></script>
 </head>
-
 <body>
 	...content goes here...
 </body>
