--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 		<h2>Two</h2>
 		<p>I have an id of "two" on my page container. I'm the second page container in this multi-page template.</p>
 		<p>Notice that the theme is different for this page because we've added a few <code>data-theme</code> swatch assigments here to show off how flexible it is. You can add any content or widget to these pages, but we're keeping these simple.</p>
-		<p><a href="#one" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all ui-btn-b">Back to page "one"</a></p>
+		<p><a href="#one" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all">Back to page "one"</a></p>
+		<p><a href="#third" data-direction="reverse" class="ui-btn ui-shadow ui-corner-all">Forward to page "three"</a></p>
 
 	</div><!-- /content -->
 
@@ -69,6 +70,25 @@
 		<h2>Popup</h2>
 		<p>I have an id of "popup" on my page container and only look like a dialog because the link to me had a <code>data-rel="dialog"</code> attribute which gives me this inset look and a <code>data-transition="pop"</code> attribute to change the transition to pop. Without this, I'd be styled as a normal page.</p>
 		<p><a href="#one" data-rel="back" class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-icon-back ui-btn-icon-left">Back to page "one"</a></p>
+	</div><!-- /content -->
+
+	<div data-role="footer">
+		<h4>Page Footer</h4>
+	</div><!-- /footer -->
+</div><!-- /page popup -->
+
+
+<!-- Start of fourth page: #popup -->
+<div data-role="page" id="third" data-theme="a">
+
+	<div data-role="header">
+		<h1>Page Three</h1>
+	</div><!-- /header -->
+
+	<div role="main" class="ui-content">
+		<h2>Popup</h2>
+		<p>I have an id of "popup" on my page container and only look like a dialog because the link to me had a <code>data-rel="dialog"</code> attribute which gives me this inset look and a <code>data-transition="pop"</code> attribute to change the transition to pop. Without this, I'd be styled as a normal page.</p>
+		<p><a href="#two" data-rel="back" class="ui-btn ui-shadow ui-corner-all ui-btn-inline ui-icon-back ui-btn-icon-left">Back to page "two"</a></p>
 	</div><!-- /content -->
 
 	<div data-role="footer">
