index.html updated

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 		<p>You link to internal pages by referring to the <code>id</code> of the page you want to show. For example, to <a href="#two">link</a> to the page with an <code>id</code> of "two", my link would have a <code>href="#two"</code> in the code.</p>
 
 		<h3>Show internal pages:</h3>
-		<p><a href="#two" class="ui-btn ui-shadow ui-corner-all">Show page "two"</a></p>
-		<p><a href="#popup" class="ui-btn ui-shadow ui-corner-all" data-rel="dialog" data-transition="pop">Show page "popup" (as a dialog)</a></p>
+		<p><a href="#two" class="ui-btn ui-shadow ui-corner-all">Forward to page "two"</a></p>
+		<p><a href="#popup" class="ui-btn ui-shadow ui-corner-all" data-rel="dialog" data-transition="turn">Show page "popup" (as a dialog)</a></p>
 	</div><!-- /content -->
 
 	<div data-role="footer" data-theme="a">
@@ -82,7 +82,7 @@
 <div data-role="page" id="third" data-theme="a">
 
 	<div data-role="header">
-		<h1>Page Three</h1>
+		<h1>Three</h1>
 	</div><!-- /header -->
 
 	<div role="main" class="ui-content">
